<resources>
    <string name="app_name">ArPiRobot Mobile Drive Station</string>
    <string name="settings_title">Settings</string>
    <string name="log_title">Logs</string>
    <string name="nettable_title">Network Table</string>
    <string name="about_title">About</string>

    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="log">Log</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="title_activity_log">Logs</string>
    <string name="action_settings">Settings</string>
    <string name="robot_log">Robot Log</string>
    <string name="ds_log">Drive Station Log</string>
    <string name="nettable">Network Table</string>
</resources>
